# mcts

./: pyproject.toml  test.py
src/mcts/: __init__.py  __main__.py  agents.py  game.py  mcts.py  state.py  ttt.py
tests/: __init__.py  test_mcts.py  test_test_state.py  test_ttt.py
