[project]
name = "mcts"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jonathan Elsner", email = "jeelsner+gh@outlook.com"},
]
dependencies = [
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
    "coverage>=7.6.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
test = "coverage run -m pytest"
coverage-report = "coverage report --omit=tests/*"
coverage-html = "coverage html --omit=tests/*"
coverage = {composite = ["test", "coverage-html", "coverage-report"]}
